<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_202"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dp_33"
        android:layout_marginRight="@dimen/dp_33"
        android:background="@drawable/shape_rounded_white">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/application_submitted"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/sp_23" />

        <TextView
            android:id="@+id/tv_two_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/moderated"
            android:textColor="@color/color_484848"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="@dimen/dp_74"
            android:layout_height="@dimen/dp_34"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp_24"
            android:background="@drawable/shape_rounded_reg_btn"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />


    </RelativeLayout>

</RelativeLayout>