<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginLeft="@dimen/dp_17"
        android:layout_marginRight="@dimen/dp_17"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/shape_text_line_bg_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_17"
        android:paddingRight="@dimen/dp_17">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_17"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subimt_time"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_submit_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_time"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_audit_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_11"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applicant"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_applicant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_3"
            android:layout_marginTop="@dimen/dp_14"
            android:background="@color/color_f4f1f2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_12"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_status"
                android:layout_width="@dimen/dp_17"
                android:layout_height="@dimen/dp_17"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/dp_7" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/red"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_apply_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginTop="@dimen/sp_12"
            android:layout_marginBottom="@dimen/dp_22"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>

</RelativeLayout>